--- a/style.css
+++ b/style.css
@@ -31,24 +31,18 @@ nav a {
    text-decoration: none;
 }
 
-right-nav {
-    float: right;
-  }
-  
-right-nav ul {
-    list-style-type: square;
-    margin: 0;
-    padding: 0;
+#login-logout{
+   float: right;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   border-radius: 25px;
+   background: #73AD21;
+   padding: 20px;
+   
 }
-  
-right-nav li {
-    display: inline-block;
-    margin-right: 20px;
-}
-  
-right-nav li:last-child {
-    margin-right: 0;
-}
+
+
 
 main {
    max-width: 800px;
